--- a/Personal Portfolio Website/index.html
+++ b/Personal Portfolio Website/index.html
@@ -39,7 +39,7 @@
     <!-- Main Content -->
     <div class="main-content">
       <!-- Home Section -->
-      <section class="home section">
+      <section class="home section hidden">
         <div class="container">
           <div class="intro">
             <img src="images/about.jpg" alt="profile" class="shadow-dark">
@@ -57,7 +57,7 @@
       <!-- Home Section End -->
 
       <!-- About Section -->
-      <section class="about section">
+      <section class="about section hidden">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -223,7 +223,7 @@
       </section>
       <!-- About Section End -->
       <!-- Service Section -->
-      <section class="service section">
+      <section class="service section hidden">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -289,14 +289,139 @@
         </div>
       </section>
       <!-- Service Section End -->
+      <!-- Portfolio Section -->
+      <section class="portfolio section">
+        <div class="container">
+          <div class="row">
+            <div class="section-title padd-15">
+              <h2>Portfolio</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="portfolio-filter padd-15">
+              <button type="button" class="active" data-filter="all">ALL</button>
+              <button type="button" data-filter="web-design">Web Design</button>
+              <button type="button" data-filter="photography">Photography</button>
+              <button type="button" data-filter="wordpress">Wordpress</button>
+            </div>
+          </div>
+          <div class="row">
+            <!-- Portfolio Item -->
+            <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="images/portfolio/1.jpg" alt="portfolio">
+                </div>
+                <div class="portfolio-info">
+                  <h4>Web Design</h4>
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Portfolio Item End -->
+            <!-- Portfolio Item -->
+            <div class="portfolio-item padd-15" data-category="photography">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="images/portfolio/2.jpg" alt="portfolio">
+                </div>
+                <div class="portfolio-info">
+                  <h4>Photography</h4>
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Portfolio Item End -->
+            <!-- Portfolio Item -->
+            <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="images/portfolio/3.jpg" alt="portfolio">
+                </div>
+                <div class="portfolio-info">
+                  <h4>Web Design</h4>
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Portfolio Item End -->
+            <!-- Portfolio Item -->
+            <div class="portfolio-item padd-15" data-category="photography">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="images/portfolio/4.jpg" alt="portfolio">
+                </div>
+                <div class="portfolio-info">
+                  <h4>Photography</h4>
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Portfolio Item End -->
+            <!-- Portfolio Item -->
+            <div class="portfolio-item padd-15" data-category="wordpress">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="images/portfolio/5.jpg" alt="portfolio">
+                </div>
+                <div class="portfolio-info">
+                  <h4>Wordpress</h4>
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Portfolio Item End -->
+            <!-- Portfolio Item -->
+            <div class="portfolio-item padd-15" data-category="web-design">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="images/portfolio/6.jpg" alt="portfolio">
+                </div>
+                <div class="portfolio-info">
+                  <h4>Web Design</h4>
+                  <div class="icon">
+                    <i class="fa fa-search"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Portfolio Item End -->
+          </div>
+        </div>
+      </section>
+      <!-- Portfolio Section End -->
     </div>
     <!-- Main Content End -->
   </div>
   <!-- Main Container -->
+  <!-- Lightbox -->
+  <div class="lightbox">
+    <div class="lightbox-content">
+      <div class="lightbox-close">&times;</div>
+      <img src="images/portfolio/1.jpg" class="lightbox-img">
+      <div class="lightbox-caption">
+        <div class="caption-text"></div>
+        <div class="caption-counter"></div>
+      </div>
+    </div>
+    <div class="lightbox-controls">
+      <div class="prev-item" onclick="prevItem()"><i class="fa fa-angle-left"></i></div>
+      <div class="next-item" onclick="nextItem()"><i class="fa fa-angle-right"></i></div>
+    </div>
+  </div>
+  <!-- Lightbox End -->
+  <!-- Tamplate js -->
+  <script src="js/script.js"></script>
+  <!-- Tamplate js End -->
 </body>
 </html>
-
-
-<div class="personal-info padd-15">
-  
-</div>
