--- a/Personal Portfolio Website/index.html
+++ b/Personal Portfolio Website/index.html
@@ -290,7 +290,7 @@
       </section>
       <!-- Service Section End -->
       <!-- Portfolio Section -->
-      <section class="portfolio section">
+      <section class="portfolio section hidden">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -400,6 +400,73 @@
         </div>
       </section>
       <!-- Portfolio Section End -->
+      <section class="blog section">
+        <div class="container">
+          <div class="row">
+            <div class="section-title padd-15">
+              <h2>Latest Blog</h2>
+            </div>
+          </div>
+          <div class="row">
+            <!-- Blog Item -->
+            <div class="blog-item padd-15">
+              <div class="blog-item-inner shadow-dark">
+                <div class="blog-img">
+                  <img src="images/blog/1.jpg" alt="blog">
+                  <div class="blog-date">
+                    4 Jun 2020
+                  </div>
+                </div>
+                <div class="blog-info">
+                  <h4 class="blog-title">Responsive Web Design</h4>
+                  <p class="blog-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo 
+                    quam, eum alias id, repellendus magni, quas.</p>
+                  <p class="blog-tags">Tags : <a href="#">Html</a> , <a href="#">css</a></p>
+                </div>
+              </div>
+            </div>
+            <!-- Blog Item End -->
+            <!-- Blog Item -->
+            <div class="blog-item padd-15">
+              <div class="blog-item-inner shadow-dark">
+                <div class="blog-img">
+                  <img src="images/blog/2.jpg" alt="blog">
+                  <div class="blog-date">
+                    4 Jun 2020
+                  </div>
+                </div>
+                <div class="blog-info">
+                  <h4 class="blog-title">Creative Slideshow</h4>
+                  <p class="blog-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo 
+                    quam, eum alias id, repellendus magni, quas.</p>
+                  <p class="blog-tags">Tags : <a href="#">Html</a> , <a href="#">Javascript</a></p>
+                </div>
+              </div>
+            </div>
+            <!-- Blog Item End -->
+            <!-- Blog Item -->
+            <div class="blog-item padd-15">
+              <div class="blog-item-inner shadow-dark">
+                <div class="blog-img">
+                  <img src="images/blog/3.jpg" alt="blog">
+                  <div class="blog-date">
+                    4 Jun 2020
+                  </div>
+                </div>
+                <div class="blog-info">
+                  <h4 class="blog-title">Image Gallery Lightbox</h4>
+                  <p class="blog-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo 
+                    quam, eum alias id, repellendus magni, quas.</p>
+                  <p class="blog-tags">Tags : <a href="#">Javascript</a></p>
+                </div>
+              </div>
+            </div>
+            <!-- Blog Item End -->
+          </div>
+        </div>
+      </section>
+      <!-- Blog Section -->
+      <!-- Blog Section End -->
     </div>
     <!-- Main Content End -->
   </div>
