--- a/Personal Portfolio Website/index.html
+++ b/Personal Portfolio Website/index.html
@@ -39,7 +39,7 @@
     <!-- Main Content -->
     <div class="main-content">
       <!-- Home Section -->
-      <section class="home section hidden">
+      <section class="home section">
         <div class="container">
           <div class="intro">
             <img src="images/about.jpg" alt="profile" class="shadow-dark">
@@ -57,7 +57,7 @@
       <!-- Home Section End -->
 
       <!-- About Section -->
-      <section class="about section hidden">
+      <section class="about section">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -223,7 +223,7 @@
       </section>
       <!-- About Section End -->
       <!-- Service Section -->
-      <section class="service section hidden">
+      <section class="service section">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -290,7 +290,7 @@
       </section>
       <!-- Service Section End -->
       <!-- Portfolio Section -->
-      <section class="portfolio section hidden">
+      <section class="portfolio section">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -400,6 +400,7 @@
         </div>
       </section>
       <!-- Portfolio Section End -->
+      <!-- Blog Section -->
       <section class="blog section">
         <div class="container">
           <div class="row">
@@ -465,8 +466,72 @@
           </div>
         </div>
       </section>
-      <!-- Blog Section -->
       <!-- Blog Section End -->
+      <!-- Contact Section -->
+      <section class="contact section">
+        <div class="container">
+          <div class="row">
+            <div class="section-title padd-15">
+              <h2>Contact Me</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="contact-info-item padd-15">
+              <div class="icon"><i class="fa fa-phone"></i></div>
+              <h4>Call Us on</h4>
+              <p>+91 8800 000 000</p>
+            </div>
+            <div class="contact-info-item padd-15">
+              <div class="icon"><i class="fa fa-map-marker"></i></div>
+              <h4>Office</h4>
+              <p>+91 8800 000 000</p>
+            </div>
+            <div class="contact-info-item padd-15">
+              <div class="icon"><i class="fa fa-envelope"></i></div>
+              <h4>Email</h4>
+              <p>info@gmail.com</p>
+            </div>
+          </div>
+          <!-- Contact Form -->
+          <div class="row">
+            <form class="contact-form padd-15">
+              <div class="row">
+                <div class="form-item col-6 padd-15">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Name*">
+                  </div>
+                </div>
+                <div class="form-item col-6 padd-15">
+                  <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Email*">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-item col-12 padd-15">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Subject*">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-item col-12 padd-15">
+                  <div class="form-group">
+                    <textarea type="text" class="form-control" placeholder="Your Message...*"></textarea>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 padd-15">
+                  <button class="btn" type="submit">Send Message</button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- Contact Form End -->
+        </div>
+      </section>
+      <!-- Contact Section End -->
     </div>
     <!-- Main Content End -->
   </div>
